--- a/makepkg.conf
+++ b/makepkg.conf
@@ -9,6 +9,7 @@ CHOST="$(arch)-pc-linux-musl"
 
 CFLAGS="-Os -pipe -fno-plt -fstack-clash-protection -fcf-protection -fexceptions"
 CXXFLAGS="$CFLAGS"
+LDFLAGS="-lmimalloc"
 MAKEFLAGS="CC=cc CXX=c++ -j$(grep -c processor /proc/cpuinfo)"
 
 BUILDENV=(!distcc color !ccache check !sign)
